<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_exchange"
            android:layout_marginStart="@dimen/main_card_margin"
            android:layout_marginTop="@dimen/main_card_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/main_card_margin"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_circle_up_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell"
                android:layout_marginLeft="@dimen/main_card_left_margin"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_sell"
                android:inputType="number"
                android:text=""/>
            <Spinner
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:id="@+id/spinner_sell"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/main_card_margin"
            android:layout_marginEnd="@dimen/main_card_margin"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_circle_down_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive"
                android:layout_marginLeft="@dimen/main_card_left_margin"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_receive"
                android:text="0.00"
                android:autoSizeMinTextSize="5sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                android:paddingLeft="4dp"/>
            <Spinner
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:foregroundTint="@color/white"
                android:id="@+id/spinner_receive"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_card_margin"
            android:id="@+id/btn_submit"
            app:cornerRadius="20dp"
            android:text="@string/submit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_balances"
            android:layout_marginStart="@dimen/main_card_margin"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_card_margin"
            android:id="@+id/recycler_balances"/>

    </LinearLayout>








</FrameLayout>